# MONGORAG

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.py
exceptions/: __init__.py  handlers.py
logger/: logging_config.py
test/: rag_mongo.ipynb  test.ipynb
